[package]
name = "tofn"
version = "0.1.0"
authors = [
  "Gus Gutoski <gus@axelar.network>",
  "Milap Sheth <milap@axelar.network>",
  "Thor Kamphefner <thor@entropy.xyz>",
  "John Sahhar <john@entropy.xyz>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.58"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand_chacha = "0.3"
hmac = "0.12.1"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
hex = "0.4.3"
secrecy = "0.8"

# k256 baggage
k256 = { version = "0.10.4", features = ["serde"] }
ecdsa = "0.13.4"
rand = "0.8"
sha2 = { version = "0.10.2", features = [
  "std",
  "asm",
], default-features = false }
sha3 = { version = "0.10.1", default-features = false }
generic-array = { version = "0.14", features = ["zeroize"] }

# logging
tracing = { version = "0.1", default-features = false }

libpaillier = { git = "https://github.com/axelarnetwork/paillier-rs", features = [
  "gmp",
], default-features = false }

# ceygen
chrono = "0.4.19"
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
tracing-subscriber = { version = "0", features = [
  "env-filter",
  "fmt",
], default-features = false }

[dev-dependencies]
tracing-test = "0" # enable logging for tests
criterion = "0.3"

[[bench]]
name = "safe_primes"
harness = false

# Don't abort in case there is a panic to clean up data
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
malicious = []
